--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <ul style="list-style-type:none">
       <center>
       <div class="row small-up-1 medium-up-3">
-        <div class= "column"><li> <a href="aboutme.html" class="navimg"><img src ="img/me.jpg" height="425" width="425" > </a></li></div>
-      <div class= "column"><li> <a href="projects.html" class="navimg"><img src ="img/projects.jpg" height="425" width="425" ></a></li> </div>
-      <div class="column"> <li><a href="exp.html"class="navimg"><img src = "img/exp.jpg" height="425" width="425" ></a></li> </div>
+        <div class= "column"><li> <a href="aboutme.html" class="navimg"><img src ="img/me.JPG" height="425" width="425" > </a></li></div>
+      <div class= "column"><li> <a href="projects.html" class="navimg"><img src ="img/projects.JPG" height="425" width="425" ></a></li> </div>
+      <div class="column"> <li><a href="exp.html"class="navimg"><img src = "img/exp.JPG" height="425" width="425" ></a></li> </div>
      </div> </section>
 <div class="row small-up-1 medium-up-3 ">
-    <div class= "column"><li> <a href="extra.html"class="navimg"><img src="img/extracurricular.jpg" height="425" width="425" > </a></li></div>
-  <div class= "column"> <li> <a href="img/Taina Cabalero Resume.jpg" download class="navimg"><img src="img/resume.jpg" height="425" width="425" ></a></li></div>
-  <div class= "column"> <li> <a href="contact.html"class="navimg"><img src="img/contact.jpg" height="425" width="425" ></a></li></div>
+    <div class= "column"><li> <a href="extra.html"class="navimg"><img src="img/extracurricular.JPG" height="425" width="425" > </a></li></div>
+  <div class= "column"> <li> <a href="img/Taina Cabalero Resume.JPG" download class="navimg"><img src="img/resume.JPG" height="425" width="425" ></a></li></div>
+  <div class= "column"> <li> <a href="contact.html"class="navimg"><img src="img/contact.JPG" height="425" width="425" ></a></li></div>
 </ul>
 </ul>
 </center>
