--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
       <li><a href="aboutme.html" class="mainnav">About Me</a> </li>
       <li><a href="projects.html"class="mainnav"><h2>Projects</h2></a></li>
       <li><a href="extra.html"class="mainnav">Extracurriculars</a></li>
-        <li><a href="img/Taina Cabalero Resume.jpg" download class="mainnav">Resume</a></li>
+        <li><a href="img/Taina Cabalero Resume.JPG" download class="mainnav">Resume</a></li>
           <li><a href="exp.html"class="mainnav">Experience</a></li>
             <li><a href="contact.html"class="mainnav">Contact Me</a></li>
     </ul>
@@ -27,7 +27,7 @@
 
 <div class="right">
   <h1> Slavery Awareness Fair </h1>
-<img src="img/slav.jpg" class="propic">
+<img src="img/slav.JPG" class="propic">
   <p> Throughout my sophomore year, the entirety of my class at Excelsior created and organized a Slavery Awareness Fair. The sole purpose of this event was to inform the public about the dangers and existence of modern day slavery. My contribution to the fair involved creating a website to publicize the event as well as further inform the public. I served as a project manager throughout the process and oversaw, editted, and created content and design plans for the webpage.  </p>
 <hr color="white">
 <h1> P-TECH Film Challenge </h1>
