--- a/extra.html
+++ b/extra.html
@@ -35,7 +35,7 @@
   <p> I became a member of Global to Local in my junior year of high school. Global to Local is an organization centered around service learning. We believe that by immersing ourselved in another culture to volunteer for positive social change, we will be better prepared to look critically at our own community and work to make it a better place. We plan on traveling to Quito, Ecuador this summer to work at a grassroots organization called Casa Victoria, introducing the youth of Ecuador to new technology and insight. </p>
 <hr color="white">
 <h1> Dance </h1>
-<img src="img/dance.JPG" class="propic" >
+<img src="img/dance.jpg" class="propic" >
 <p> Dance has been a major part of my life since the age of 3. I'm well versed in several genres including hip hop, tap, ballet, jazz, etc. Some of my most memorable perforamnces include the half time show for the Harlem Globetrotters at Madison Square Garden and the Barclays Center.</p>
 </div>
 
