--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </div> </section>
 <div class="row small-up-1 medium-up-3 ">
     <div class= "column"><li> <a href="extra.html"class="navimg"><img src="img/extracurricular.JPG" height="425" width="425" > </a></li></div>
-  <div class= "column"> <li> <a href="Taina Cabalero Resume.docx" download class="navimg"><img src="img/resume.JPG" height="425" width="425" ></a></li></div>
+  <div class= "column"> <li> <a href="Taina Caballero Resume.pdf" download class="navimg"><img src="img/resume.JPG" height="425" width="425" ></a></li></div>
   <div class= "column"> <li> <a href="contact.html"class="navimg"><img src="img/contact.JPG" height="425" width="425" ></a></li></div>
 </ul>
 </ul>
