--- a/exp.html
+++ b/exp.html
@@ -16,7 +16,7 @@
       <li><a href="aboutme.html" class="mainnav">About Me</a> </li>
       <li><a href="projects.html"class="mainnav">Projects</a></li>
       <li><a href="extra.html"class="mainnav">Extracurriculars</a></li>
-        <li><a href="img/Taina Cabalero Resume.jpg" download class="mainnav">Resume</a></li>
+        <li><a href="Taina Caballero Resume.pdf" download class="mainnav">Resume</a></li>
           <li><a href="exp.html"class="mainnav"><h2>Experience</h2></a></li>
             <li><a href="contact.html"class="mainnav">Contact Me</a></li>
     </ul>
