--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
     </div>
       <li><a href="projects.html"class="mainnav">Projects</a></li>
       <li><a href="extra.html"class="mainnav">Extracurriculars</a></li>
-        <li><a href="img/Taina Cabalero Resume.jpg" download class="mainnav">Resume</a></li>
+        <li><a href="Taina Caballero Resume.pdf" download class="mainnav">Resume</a></li>
           <li><a href="exp.html"class="mainnav">Experience</a></li>
             <li><a href="contact.html"class="mainnav">Contact Me</a></li>
     </ul>
